fixed footer not showing up in 13inch screens

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,6 @@ body {
 }
 
 #map-canvas {
-  position:fixed;
   margin-top: 30px;
   height: 80%;
   width: 80%;
@@ -63,8 +62,7 @@ h1 {
 }
 
 footer {
-  margin-top: 45px;
-  padding-top: 5px;
+  margin-top: 10px;
   color: #999;
 }
 
